--- a/einsum_webapp/package.json
+++ b/einsum_webapp/package.json
@@ -12,7 +12,24 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@tailwindcss/postcss": "^4.0.8",
+    "clsx": "^2.1.1",
+    "d3-hierarchy": "^3.1.2",
+    "d3-scale": "^4.0.2",
+    "lodash": "^4.17.21",
+    "pako": "^2.1.0",
+    "react-icons": "^5.5.0",
+    "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.2.0",
+    "reactflow": "^11.11.4",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
