--- a/einsum_webapp/package.json
+++ b/einsum_webapp/package.json
@@ -11,8 +11,6 @@
     "test": "jest --config jest.config.js"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -24,6 +22,8 @@
     "d3-scale": "^4.0.2",
     "lodash": "^4.17.21",
     "pako": "^2.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.2.0",
@@ -41,6 +41,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
@@ -51,6 +52,8 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.8",
     "vite": "^6.1.0"
   }
 }
